# ChessEngine

./: .gitignore  Board.cpp  Board.hpp  CMakeLists.txt  GameState.cpp  GameState.hpp  in.txt  main.cpp  t.txt
inc/: Color.hpp  Piece.hpp
include/: Board.hpp  Engine.hpp  GameState.hpp  MoveGenerator.hpp  Piece.hpp  PieceColoredType.hpp  Ply.hpp  PseudoLegalMoveGenerator.hpp
include/Engine/: Engine.hpp  UCICommand.hpp  UCICommandGenerator.hpp  UCIHandeling.hpp
include/Engine/Commands/: Go.hpp  IsReady.hpp  Quit.hpp  Stop.hpp  Uci.hpp  UciNewGame.hpp
include/Game/: Board.hpp  DirectionIterator.hpp  GameState.hpp  MoveGenerator.hpp
src/: Board.cpp  Board.hpp  Engine.cpp  Engine.hpp  GameState.cpp  GameState.hpp  Helper.cpp  Helper.hpp  PseudoLegalMoveGenerator.cpp  UCICommands.cpp  UCICommands.hpp  UCIHandeling.cpp  UCIHandeling.hpp
src/Engine/: Engine.cpp  UCICommand.cpp  UCICommandGenerator.cpp  UCIHandeling.cpp
src/Engine/Commands/: Go.cpp  IsReady.cpp  Quit.cpp  Stop.cpp  Uci.cpp  UciNewGame.cpp
src/Game/: Board.cpp  Color.cpp  GameState.cpp  PseudoLegalMoveGenerator.cpp
tests/: test.cpp
